# pipx_test

./: README.md  pyproject.toml
pipx_test/: __init__.py  cli.py
